[gd_scene load_steps=9 format=3 uid="uid://cmgq1b3slbsx7"]

[ext_resource type="Script" path="res://scripts/levels/first_time_player.gd" id="1_cvuqc"]
[ext_resource type="Texture2D" uid="uid://pi6nxes80imt" path="res://art/UI/Black_Background/black_bg_1.png" id="1_twptr"]
[ext_resource type="Texture2D" uid="uid://dfl8ox20w3xn" path="res://art/UI/Black_Background/black_bg_2.png" id="2_hfqjy"]
[ext_resource type="Texture2D" uid="uid://bsmsy5dhk3vsp" path="res://art/UI/Black_Background/black_bg_3.png" id="3_uh3w5"]
[ext_resource type="Texture2D" uid="uid://dq4qin2d2o6d3" path="res://art/UI/Black_Background/black_bg_4.png" id="4_cnaox"]
[ext_resource type="Texture2D" uid="uid://cywsutwou4bx4" path="res://art/UI/Black_Background/black_bg_5.png" id="5_tokeo"]
[ext_resource type="AudioStream" uid="uid://bqips7yuycm2u" path="res://sounds/intro.ogg" id="7_qoiif"]

[sub_resource type="AnimatedTexture" id="AnimatedTexture_x87bt"]
frames = 5
speed_scale = 15.0
frame_0/texture = ExtResource("1_twptr")
frame_1/texture = ExtResource("2_hfqjy")
frame_1/duration = 1.0
frame_2/texture = ExtResource("3_uh3w5")
frame_2/duration = 1.0
frame_3/texture = ExtResource("4_cnaox")
frame_3/duration = 1.0
frame_4/texture = ExtResource("5_tokeo")
frame_4/duration = 1.0

[node name="first_time_player" type="CanvasLayer"]
script = ExtResource("1_cvuqc")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AnimatedTexture_x87bt")

[node name="TopLabel" type="RichTextLabel" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = 479.0
offset_top = 105.0
offset_right = 1422.0
offset_bottom = 288.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/normal_font_size = 100
bbcode_enabled = true
text = "[center]Open your eyes.[/center]"
scroll_active = false
metadata/_edit_use_anchors_ = true

[node name="MiddleLabel" type="RichTextLabel" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = 479.0
offset_top = 405.0
offset_right = 1422.0
offset_bottom = 588.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/normal_font_size = 100
bbcode_enabled = true
text = "[center]The [color=gold][wave][shake]Tree[/shake][/wave][/color] is dying.[/center]"

[node name="BottomLabel" type="RichTextLabel" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = 479.0
offset_top = 705.0
offset_right = 1422.0
offset_bottom = 1000.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/normal_font_size = 100
bbcode_enabled = true
text = "[center]Do not let this opportunity pass.[/center]"

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_qoiif")
pitch_scale = 0.95
bus = &"Music"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="start_game"]
